--- a/src/css/coustom.css
+++ b/src/css/coustom.css
@@ -1,5 +1,5 @@
-@import url('https://fonts.googleapis.com/css2?family=Roboto&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@100..900&display=swap');
 
 body {
-    font-family: 'Roboto', sans-serif !important;
+    font-family: "Inter", sans-serif;
 }
