--- a/src/css/output.css
+++ b/src/css/output.css
@@ -710,20 +710,24 @@ video {
   margin-right: auto;
 }
 
+.ml-auto {
+  margin-left: auto;
+}
+
 .mt-2 {
   margin-top: 0.5rem;
 }
 
-.ml-auto {
-  margin-left: auto;
+.mt-4 {
+  margin-top: 1rem;
 }
 
 .mt-3 {
   margin-top: 0.75rem;
 }
 
-.mt-4 {
-  margin-top: 1rem;
+.mt-5 {
+  margin-top: 1.25rem;
 }
 
 .box-border {
@@ -834,12 +838,44 @@ video {
   height: fit-content;
 }
 
-.w-1\/2 {
-  width: 50%;
+.h-11 {
+  height: 2.75rem;
+}
+
+.h-16 {
+  height: 4rem;
+}
+
+.h-9 {
+  height: 2.25rem;
+}
+
+.h-6 {
+  height: 1.5rem;
+}
+
+.h-3 {
+  height: 0.75rem;
+}
+
+.h-4 {
+  height: 1rem;
 }
 
 .w-8 {
   width: 2rem;
+}
+
+.w-9 {
+  width: 2.25rem;
+}
+
+.w-\[44\%\] {
+  width: 44%;
+}
+
+.w-\[88\%\] {
+  width: 88%;
 }
 
 .w-\[this-is\\\\\] {
@@ -854,48 +890,28 @@ video {
   width: weird-and-invalid;
 }
 
-.w-2\/5 {
-  width: 40%;
-}
-
-.w-10 {
-  width: 2.5rem;
-}
-
-.w-9 {
-  width: 2.25rem;
-}
-
-.w-5\/12 {
-  width: 41.666667%;
+.w-full {
+  width: 100%;
 }
 
 .w-\[45\%\] {
   width: 45%;
 }
 
-.w-\[43\%\] {
-  width: 43%;
+.w-\[95\%\] {
+  width: 95%;
 }
 
-.w-\[44\%\] {
-  width: 44%;
+.w-6 {
+  width: 1.5rem;
 }
 
-.w-\[40\%\] {
-  width: 40%;
+.w-3 {
+  width: 0.75rem;
 }
 
-.w-\[80\%\] {
-  width: 80%;
-}
-
-.w-\[90\%\] {
-  width: 90%;
-}
-
-.w-\[88\%\] {
-  width: 88%;
+.w-4 {
+  width: 1rem;
 }
 
 .flex-1 {
@@ -1428,16 +1444,20 @@ video {
   gap: 0.5rem;
 }
 
-.gap-4 {
-  gap: 1rem;
-}
-
 .gap-3 {
   gap: 0.75rem;
 }
 
+.gap-4 {
+  gap: 1rem;
+}
+
 .gap-5 {
   gap: 1.25rem;
+}
+
+.gap-1 {
+  gap: 0.25rem;
 }
 
 .space-x-2 > :not([hidden]) ~ :not([hidden]) {
@@ -1760,12 +1780,12 @@ video {
   border-radius: 9999px;
 }
 
-.rounded-md {
-  border-radius: 0.375rem;
-}
-
 .rounded-lg {
   border-radius: 0.5rem;
+}
+
+.rounded-md {
+  border-radius: 0.375rem;
 }
 
 .rounded-xl {
@@ -1838,6 +1858,10 @@ video {
   border-width: 1px;
 }
 
+.border-0 {
+  border-width: 0px;
+}
+
 .border-x {
   border-left-width: 1px;
   border-right-width: 1px;
@@ -1896,9 +1920,18 @@ video {
   border-style: none;
 }
 
-.bg-\[\#f5f6fa\] {
-  --tw-bg-opacity: 1;
-  background-color: rgb(245 246 250 / var(--tw-bg-opacity));
+.border-gray {
+  --tw-border-opacity: 1;
+  border-color: rgb(109 113 116 / var(--tw-border-opacity));
+}
+
+.border-l-gray {
+  --tw-border-opacity: 1;
+  border-left-color: rgb(109 113 116 / var(--tw-border-opacity));
+}
+
+.border-opacity-25 {
+  --tw-border-opacity: 0.25;
 }
 
 .bg-\[rgb\(255\2c 0\2c 0\)\] {
@@ -1906,14 +1939,24 @@ video {
   background-color: rgb(255 0 0 / var(--tw-bg-opacity));
 }
 
-.bg-white {
+.bg-brand {
   --tw-bg-opacity: 1;
-  background-color: rgb(255 255 255 / var(--tw-bg-opacity));
+  background-color: rgb(82 89 179 / var(--tw-bg-opacity));
 }
 
 .bg-light-gray {
   --tw-bg-opacity: 1;
   background-color: rgb(245 246 250 / var(--tw-bg-opacity));
+}
+
+.bg-white {
+  --tw-bg-opacity: 1;
+  background-color: rgb(255 255 255 / var(--tw-bg-opacity));
+}
+
+.bg-red-700 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(185 28 28 / var(--tw-bg-opacity));
 }
 
 .decoration-slice {
@@ -2031,14 +2074,34 @@ video {
   padding-right: 1.25rem;
 }
 
+.px-6 {
+  padding-left: 1.5rem;
+  padding-right: 1.5rem;
+}
+
 .py-10 {
   padding-top: 2.5rem;
   padding-bottom: 2.5rem;
 }
 
-.py-5 {
-  padding-top: 1.25rem;
-  padding-bottom: 1.25rem;
+.py-2 {
+  padding-top: 0.5rem;
+  padding-bottom: 0.5rem;
+}
+
+.py-6 {
+  padding-top: 1.5rem;
+  padding-bottom: 1.5rem;
+}
+
+.px-2 {
+  padding-left: 0.5rem;
+  padding-right: 0.5rem;
+}
+
+.px-7 {
+  padding-left: 1.75rem;
+  padding-right: 1.75rem;
 }
 
 .py-3 {
@@ -2046,9 +2109,29 @@ video {
   padding-bottom: 0.75rem;
 }
 
-.py-6 {
-  padding-top: 1.5rem;
-  padding-bottom: 1.5rem;
+.py-1 {
+  padding-top: 0.25rem;
+  padding-bottom: 0.25rem;
+}
+
+.px-4 {
+  padding-left: 1rem;
+  padding-right: 1rem;
+}
+
+.px-1 {
+  padding-left: 0.25rem;
+  padding-right: 0.25rem;
+}
+
+.px-3 {
+  padding-left: 0.75rem;
+  padding-right: 0.75rem;
+}
+
+.py-\[2px\] {
+  padding-top: 2px;
+  padding-bottom: 2px;
 }
 
 .pt-3 {
@@ -2121,8 +2204,17 @@ video {
   line-height: 1.25rem;
 }
 
+.text-xs {
+  font-size: 0.75rem;
+  line-height: 1rem;
+}
+
 .font-bold {
   font-weight: 700;
+}
+
+.font-semibold {
+  font-weight: 600;
 }
 
 .uppercase {
@@ -2217,14 +2309,24 @@ video {
   color: rgb(48 54 61 / var(--tw-text-opacity));
 }
 
-.text-dark-gray {
-  --tw-text-opacity: 1;
-  color: rgb(59 68 74 / var(--tw-text-opacity));
-}
-
 .text-gray {
   --tw-text-opacity: 1;
   color: rgb(109 113 116 / var(--tw-text-opacity));
+}
+
+.text-white {
+  --tw-text-opacity: 1;
+  color: rgb(255 255 255 / var(--tw-text-opacity));
+}
+
+.text-red-700 {
+  --tw-text-opacity: 1;
+  color: rgb(185 28 28 / var(--tw-text-opacity));
+}
+
+.text-red-600 {
+  --tw-text-opacity: 1;
+  color: rgb(220 38 38 / var(--tw-text-opacity));
 }
 
 .underline {
@@ -2593,9 +2695,9 @@ video {
   position: absolute;
 }
 
-.before\:left-4::before {
+.before\:left-9::before {
   content: var(--tw-content);
-  left: 1rem;
+  left: 2.25rem;
 }
 
 .before\:top-0::before {
@@ -2603,19 +2705,9 @@ video {
   top: 0px;
 }
 
-.before\:left-2::before {
+.before\:left-3::before {
   content: var(--tw-content);
-  left: 0.5rem;
-}
-
-.before\:left-7::before {
-  content: var(--tw-content);
-  left: 1.75rem;
-}
-
-.before\:left-9::before {
-  content: var(--tw-content);
-  left: 2.25rem;
+  left: 0.75rem;
 }
 
 .before\:block::before {
@@ -2628,20 +2720,9 @@ video {
   height: 100%;
 }
 
-.before\:w-1::before {
-  content: var(--tw-content);
-  width: 0.25rem;
-}
-
 .before\:w-\[1px\]::before {
   content: var(--tw-content);
   width: 1px;
-}
-
-.before\:bg-gray::before {
-  content: var(--tw-content);
-  --tw-bg-opacity: 1;
-  background-color: rgb(109 113 116 / var(--tw-bg-opacity));
 }
 
 .before\:bg-slate-200::before {
@@ -2675,6 +2756,21 @@ video {
 @media (min-width: 640px) {
   .sm\:underline {
     text-decoration-line: underline;
+  }
+}
+
+@media (min-width: 1024px) {
+  .lg\:w-\[45\%\] {
+    width: 45%;
+  }
+
+  .lg\:w-\[88\%\] {
+    width: 88%;
+  }
+
+  .lg\:before\:left-9::before {
+    content: var(--tw-content);
+    left: 2.25rem;
   }
 }
 
